# fortuno-coarray

./: CMakeLists.txt  README.rst  fpm.toml  meson.build  meson.options
.github/workflows/: ci.yml
cmake/: FortunoCoarrayConfig.cmake.in  FortunoCoarrayHelpers.cmake
example/: CMakeLists.txt  meson.build  simple_tests.f90  testapp.f90
src/: CMakeLists.txt  meson.build  meson.coarray.build
src/fortuno_coarray/: coabasetypes.f90  coacmdapp.f90  coapurecase.f90  coapuresuite.f90  meson.build
subprojects/: fortuno.cmake
test/export/: CMakeLists.txt  fpm.toml  meson.build  meson.options
test/export/app/: testapp.f90
